--- a/css/style.css
+++ b/css/style.css
@@ -1273,7 +1273,7 @@ h1, h2, h3, h4, h5,
   .unit-4 *:last-child {
     margin-bottom: 0; }
   .unit-4:hover {
-    background: rgb(243, 240, 240);
+    /* background: rgb(243, 240, 240); */
     -webkit-box-shadow: 0 4px 20px -5px rgba(0, 210, 181, 0.4);
     box-shadow: 0 4px 20px -5px rgba(0, 210, 181, 0.4);
     top: -7px; }
