--- a/css/style.css
+++ b/css/style.css
@@ -1279,8 +1279,8 @@ h1, h2, h3, h4, h5,
     top: -7px; }
     .unit-4:hover .icon-wrap {
       background-color: #fff; }
-      .unit-4:hover .icon-wrap span {
-        color: rgb(221, 221, 221) !important; }
+      /* .unit-4:hover .icon-wrap span {
+        color: rgb(221, 221, 221) !important; } */
     .unit-4:hover h3,.unit-4:hover h2 {
       color: #fff; }
     .unit-4:hover p {
@@ -2525,7 +2525,7 @@ button:hover:before, button:hover:after {
   font-size: 18px;
   border: none;
   outline: none;
-  background-color: #0b2a5d;
+  background-color: rgb(165, 151, 151);
   color: white;
   cursor: pointer;
   padding: 15px;
@@ -2535,7 +2535,7 @@ button:hover:before, button:hover:after {
 }
 
 #myBtn:hover {
-  background-color: #555;
+  background-color: gray;
 }
 
 /*end scroll top*/
@@ -2543,7 +2543,7 @@ button:hover:before, button:hover:after {
 /* Facebook chat button style */
 
 .fb-root iframe html body div div div div div div{
-  background-color: #0b2a5d;
+  background-color: black;
 
 }
 
