--- a/css/style.css
+++ b/css/style.css
@@ -2525,7 +2525,7 @@ button:hover:before, button:hover:after {
   font-size: 18px;
   border: none;
   outline: none;
-  background-color: rgb(165, 151, 151);
+  background-color: rgb(15, 7, 121);
   color: white;
   cursor: pointer;
   padding: 15px;
@@ -2535,7 +2535,7 @@ button:hover:before, button:hover:after {
 }
 
 #myBtn:hover {
-  background-color: gray;
+  background-color: rgba(65, 133, 236, 0.87);
 }
 
 /*end scroll top*/
