--- a/css/style.css
+++ b/css/style.css
@@ -1840,21 +1840,22 @@ h1, h2, h3, h4, h5,
 .circle {
   padding: 13px 20px;
   border-radius: 50%;
-  background-color: rgb(59 3 135);
+  background-color: green;
   color: #fff;
   max-height: 50px;
   z-index: 2;
 }
-
+/* rgb(59 3 135) */
 .how-it-works.row .col-2 {
   align-self: stretch;
 }
 .how-it-works.row .col-2::after {
   content: "";
   position: absolute;
-  border-left: 3px solid #b485f3;
+  border-left: 3px solid  #64e96f;
   z-index: 1;
 }
+/* #b485f3 */
 .how-it-works.row .col-2.bottom::after {
   height: 50%;
   left: 50%;
@@ -1876,7 +1877,7 @@ h1, h2, h3, h4, h5,
   height: 40px;
 }
 .timeline hr {
-  border-top: 3px solid #b485f3;
+  border-top: 3px solid #64e96f;
   margin: 0;
   top: 17px;
   position: relative;
@@ -1886,7 +1887,7 @@ h1, h2, h3, h4, h5,
   overflow: hidden;
 }
 .timeline .corner {
-  border: 3px solid #b485f3;
+  border: 3px solid #64e96f;
   width: 100%;
   position: relative;
   border-radius: 15px;
@@ -2472,7 +2473,7 @@ button:before,  button:after {
   width: 100%;
   height: 100%;
   z-index: 1;
-  background-color: rgba(52, 152, 253, 0.25);
+  background-color: rgb(14, 230, 104);
   -webkit-transition: all 0.3s;
   -moz-transition: all 0.3s;
   -o-transition: all 0.3s;
@@ -2525,7 +2526,7 @@ button:hover:before, button:hover:after {
   font-size: 18px;
   border: none;
   outline: none;
-  background-color: #9b55f7;
+  background-color: rgb(85, 187, 90);
   color: white;
   cursor: pointer;
   padding: 15px;
@@ -2535,7 +2536,7 @@ button:hover:before, button:hover:after {
 }
 
 #myBtn:hover {
-  background-color: rgb(59, 3, 135);
+  background-color: green;
 }
 
 /*end scroll top*/
