--- a/css/style.css
+++ b/css/style.css
@@ -1840,7 +1840,7 @@ h1, h2, h3, h4, h5,
 .circle {
   padding: 13px 20px;
   border-radius: 50%;
-  background-color: green;
+  background-color: rgb(59 3 135);
   color: #fff;
   max-height: 50px;
   z-index: 2;
@@ -1852,7 +1852,7 @@ h1, h2, h3, h4, h5,
 .how-it-works.row .col-2::after {
   content: "";
   position: absolute;
-  border-left: 3px solid  #64e96f;
+  border-left: 3px solid #b485f3 ;
   z-index: 1;
 }
 /* #b485f3 */
@@ -1877,7 +1877,7 @@ h1, h2, h3, h4, h5,
   height: 40px;
 }
 .timeline hr {
-  border-top: 3px solid #64e96f;
+  border-top: 3px solid #b485f3 ;
   margin: 0;
   top: 17px;
   position: relative;
@@ -1887,7 +1887,7 @@ h1, h2, h3, h4, h5,
   overflow: hidden;
 }
 .timeline .corner {
-  border: 3px solid #64e96f;
+  border: 3px solid #b485f3 ;
   width: 100%;
   position: relative;
   border-radius: 15px;
@@ -2473,7 +2473,7 @@ button:before,  button:after {
   width: 100%;
   height: 100%;
   z-index: 1;
-  background-color: rgb(14, 230, 104);
+  background-color: rgb(59 3 135);
   -webkit-transition: all 0.3s;
   -moz-transition: all 0.3s;
   -o-transition: all 0.3s;
@@ -2526,7 +2526,7 @@ button:hover:before, button:hover:after {
   font-size: 18px;
   border: none;
   outline: none;
-  background-color: rgb(85, 187, 90);
+  background-color: rgb(187, 74, 187);
   color: white;
   cursor: pointer;
   padding: 15px;
@@ -2536,7 +2536,7 @@ button:hover:before, button:hover:after {
 }
 
 #myBtn:hover {
-  background-color: green;
+  background-color: rgb(59 3 135);
 }
 
 /*end scroll top*/
