--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ h1, h2, h3, h4, h5,
   .offcanvas-menu .site-wrap:before {
     opacity: 1;
     visibility: visible; }
-/* 
+
 .btn {
   font-size: 16px;
   border-radius: 30px;
@@ -91,7 +91,7 @@ h1, h2, h3, h4, h5,
     .btn.btn-primary:hover {
       background: transparent;
       border-color: #00d2b5;
-      color: #000; } */
+      color: #000; }
 
 .line-height-1 {
   line-height: 1 !important; }
@@ -2443,7 +2443,7 @@ form.chat .in {
 .form-control:focus {
   border-bottom: 1px solid #accffe; }
 
-/* button {
+button {
   border: none;
   width: 100%;
   height: 49px;
@@ -2487,7 +2487,7 @@ button:after {
   transition-delay: 0.2s; }
 button:hover:before, button:hover:after {
   -webkit-transform: translate(0, 0);
-  transform: translate(0, 0); } */
+  transform: translate(0, 0); }
 
 @media (max-width: 991px) {
   .inner {
@@ -3101,68 +3101,7 @@ font-family: 'Poppins', sans-serif;
 font-family: 'PT Sans', sans-serif;
 font-family: 'Rajdhani', sans-serif; */
 }
-.gradient-custom-3 {
-  /* fallback for old browsers */
-  background: #84fab0;
-  
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: -webkit-linear-gradient(to right, rgba(132, 250, 176, 0.5), rgba(143, 211, 244, 0.5));
-  
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  background: linear-gradient(to right, rgba(132, 250, 176, 0.5), rgba(143, 211, 244, 0.5))
-  }
-  .gradient-custom-4 {
-  /* fallback for old browsers */
-  background: #84fab0;
-  
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: -webkit-linear-gradient(to right, rgba(132, 250, 176, 1), rgba(143, 211, 244, 1));
-  
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  background: linear-gradient(to right, rgba(132, 250, 176, 1), rgba(143, 211, 244, 1))
-  }
 
-  .gradient-custom-4:hover{
-
-    background: -webkit-linear-gradient(rgba(143, 211, 244, 1), rgba(132, 250, 176, 1));   
-    
-    transform: scale(1.1);
-  
-    }
-
-
-    .gradient-custom-4 {
-      color: #65b5f6;
-      background-color: transparent;
-      border: 3px solid #65b5f6;
-      border-radius: 10px;
-      padding: 0 16px;
-      cursor: pointer;
-      transition: all 0.3s ease-in-out;
-    }
-    .a1{
-      font-size:30px;
-      color: #65b5f6;
-      background-color: #00d2b5;
-      border: 3px solid #65b5f6;
-      border-radius: 10px;
-      padding: 0 16px;
-      cursor: pointer;
-      transition: all 0.3s ease-in-out;
-
-
-    }
-    .a2{
-      font-size:15px;
-      color: #65b5f6;
-      border: 3px solid #bfd9ee;
-      border-radius: 10px;
-      padding: 0 16px;
-      cursor: pointer;
-      transition: all 0.3s ease-in-out;
-
-
-    }
     
     
     
