--- a/css/style.css
+++ b/css/style.css
@@ -3081,6 +3081,7 @@ z-index: -1;
 }
 
 .h13{
+  padding-top: 20px;
   background: -webkit-linear-gradient(hwb(300deg 0% 26%), rgb(3 0 34));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -3109,7 +3110,94 @@ font-family: 'Rajdhani', sans-serif; */
 }
 
     
-    
+
+ 
+.btn {
+  position: relative;
+  display: inline-block;
+  border-radius: 25px;
+  line-height: 40px;
+  height: 40px;
+  padding: 0 2rem;
+  font-size: 16px;
+  font-weight: bold;
+  transition: all 0.25s ease-out;
+  text-decoration: none;
+}
+.btn::before {
+  width: 100%;
+  height: 100%;
+  z-index: 3;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  box-sizing: border-box;
+  transition: all ease-in-out 0.4s;
+  -webkit-transform: scale(0);
+  border-radius: 25px;
+  opacity: 0;
+}
+.btn::before {
+  border: 2px solid #006d82;
+}
+.btn:hover::before, .btn:active::before {
+  opacity: 1;
+  -webkit-transform: scale(1);
+}
+.btn.btn-primary {
+  border: 2px solid #0099a2;
+  background: #fff;
+  color: #000;
+  transition: all ease-in-out 0.5s;
+}
+.btn.btn-primary:hover, .btn.btn-primary:active {
+  border-color: #0099a2;
+}
+.btn.btn-primary::before {
+  border: 2px solid #006d82;
+}
+.btn.btn-secondary {
+  border: 2px solid #fff;
+  background: transparent;
+  color: #fff;
+}
+.btn.btn-secondary:hover, .btn.btn-secondary:active {
+  background: #fff;
+  color: #006d82;
+}
+.btn.btn-tertiary {
+  border: 2px solid #0099a2;
+  background: #0099a2;
+  color: #fff;
+}
+.btn.btn-tertiary:active, .btn.btn-tertiary:hover {
+  border-color: #006d82;
+  background: #006d82;
+  color: #fff;
+}
+.btn.btn-tertiary::before {
+  border: 2px solid #fff;
+}
+
+.con{
+  padding: 1rem;
+  text-align: center;
+}
+.con-black {
+  background: #000;
+}
+.con h2 {
+  margin: 0;
+}
+.con h2:after {
+  content: "";
+  display: block;
+  height: 2px;
+  width: 100px;
+  margin: 15px auto 0 auto;
+  background: #0099a2;
+}
     
       
   
